# verre

./: .gitignore  Cargo.toml  browser.js  cspell.config.yaml  flake.nix  index.d.ts  index.js  package.json  pnpm-lock.yaml  simple-test.js  simple-test.ts  tsconfig.json  verre_core.wasi-browser.js  verre_core.wasi.cjs
.github/workflows/: CI.yml
bench/: bench.sh  uws.js  verre.js
src/: lib.rs  request.rs  response.rs  verre.rs
test/: index.test.ts
