
[package]
# authors = ["verre contributors"]
edition = "2021"
name = "verre_core"
version = "0.1.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
axum = "0.8.4"
napi = { version = "3.0.0", features = ["async", "serde-json-ordered"] }
napi-derive = "3.0.0"
serde = "1.0.225"
serde_json = "1.0.145"

[build-dependencies]
napi-build = "2"

[profile.release]
lto = true
codegen-units = 1
strip = "symbols"
